# tauri-plugin-printing-ext

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
src/: dialogs.rs  lib.rs
src/dialogs/: linux.rs  macos.rs  mod.rs
webview-dist/: html2canvas.esm-1021be5b.js  index-1456ecdc.js  index-c1e6fc4e.js  index-d816b6be.js  index.d.ts  index.es-65a9a027.js  index.es-953b76a8.js  index.es-9dad4617.js  index.js
webview-src/: index.ts  rollup.config.js
