[package]
name = "tauri-plugin-printing-ext"
version = "0.0.1"
authors = [ "michaelaboah" ]
description = "A Tauri Plugin for extending printing functionality."
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.4.0" }

[target.'cfg(macos)'.dependencies]
base64 = { version = "0.21.4", optional = true }
cocoa = { version = "0.25.0", optional = true }
objc =  { version = "0.2.7", optional = true }
bson = { version = "2.6.1", optional = true }

[features]
macos-fix = ["base64", "cocoa", "objc", "bson"]

