[package]
name = "tauri-plugin-printing-ext"
version = "0.0.3"
authors = [ "michaelaboah" ]
description = "A Tauri Plugin for extending printing functionality."
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.4.0" }

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.21.4" 
cocoa = "0.25.0" 
objc = "0.2.7" 
bson = "2.6.1" 


